# rust-jira-telegram-bot

./: Cargo.toml  README.md  config.env.sample
src/: main.rs
